# gamelibs-libogg

./: Makefile  libogg_static.vcxproj  libogg_static.vcxproj.filters  meson.build
include/ogg/: os_types.h
